2004-05-16  Roland Mas  <99.roland.mas@aist.enst.fr>

	* SCM pluginification: new SCMPlugin class, SCM pages now call the
	SCM plugins instead of hardcoding CVS.  More hooks.

2004-05-12  Tom Copeland <tom@infoether.com>

	* www/include/snippet_caching.php: Modified queries to use GROUP BY
	vs repeated queries.  This requires only 2 queries rather than about 20;
	on my workstation it resulted in about a 20% speedup; should be better
	than that on large databases or setups where the application server
	and database server are on separate machines.
	* www/include/snippet_caching.php: Removed this page
	and moved the code into www/snippet/index.php.

2004-05-09  Christian Bayle <bayle@debian.org>

	* Made system management OO (Work in progress)
	created common/include/system dir that
	contains UNIX and LDAP implementation
	Now you have to choose your sys_account_manager_type
	in local.inc, defaulted to UNIX
	ldpa.php is removed, the code was moved in LDAP.class
	sys_use_ldap will be removed shortly and replace by the 
	use of sys_account_manager_type=LDAP
	Side effect will be the possibility to implement easily your 
	own system account manager do deal, e.g. with your company NIS,or 
	already existing user accounts.
	The default behaviour stays the same.
	I also added sys_state columns with db/20040507.sql
	This is not yet used but will allow faster user creation
	sys_state will have 5 possible values
	R=request system account creation
	S=request system account suppression
	C=system account created
	D=system account deleted
	E=system account creation error
	F=system account deletion error
	N=no request

2004-05-07  Tom Copeland <tom@infoether.com>

	* www/export/rss_sfnewreleases.php: Fixed a couple of 
	field names.

2004-05-06	Reinhard Spisser

	* Patch #779 send pending tracker/task notifications

2004-05-05  Jason Chen

	* Updated chinese.tab

2004-05-05  Tim Perdue  <tim@perdue.net>

	* docman can down support upload of URLs rather than files
